# GeoObjectDetector

./: CMakeLists.txt  README.md  homework.txt
include/: Config.h  DetectionManager.h  DetectionRequest.h  DetectionResult.h  GeoReferencer.h  ObjectDetector.h  SimpleJson.h  WebServer.h
src/: Config.cpp  DetectionManager.cpp  DetectionResult.cpp  GeoReferencer.cpp  ObjectDetector.cpp  WebServer.cpp  main.cpp
test/: test_detector.cpp
